--- a/.github/development/src_/TingenCommander.csproj
+++ b/.github/development/src_/TingenCommander.csproj
@@ -8,6 +8,8 @@
     <UseWPF>true</UseWPF>
     <AssemblyVersion>0.9.0.0</AssemblyVersion>
     <FileVersion>0.9.0.0</FileVersion>
+    <Version>0.9.0</Version>
+    <Title>Tingen Commander</Title>
   </PropertyGroup>
 
   <ItemGroup>
