--- a/.github/development/src_2024/TingenCommander.csproj
+++ b/.github/development/src_2024/TingenCommander.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <Version>0.9.0</Version>
+    <Title>Tingen Commander</Title>
   </PropertyGroup>
 
   <ItemGroup>
