--- a/src/TingenCommander.csproj
+++ b/src/TingenCommander.csproj
@@ -11,9 +11,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="AppData\Image\TingenCommander116x154.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="AppData\Image\TingenCommander116x154.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="AppData\Image\README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="AppData\README.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
+    
 </Project>
